[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/megaman.png" type="Texture" id=1]
[ext_resource path="res://materials/defaultmaterial.tres" type="Material" id=2]
[ext_resource path="res://scripts/menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://sprites/megamashifted-2.png" type="Texture" id=5]
[ext_resource path="res://sprites/defaultpallette.png" type="Texture" id=6]
[ext_resource path="res://sprites/megamashifted-3.png" type="Texture" id=7]
[ext_resource path="res://sprites/megamashifted-4.png" type="Texture" id=8]

[node name="Scene" type="Node2D"]

[node name="Player" type="Node2D" parent="."]
scale = Vector2( 5, 5 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Player"]
material = ExtResource( 2 )
texture = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = -516.0
margin_top = 144.0
margin_right = 510.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 2
script = ExtResource( 3 )
pallete1 = ExtResource( 6 )
pallete2 = ExtResource( 5 )
pallete3 = ExtResource( 7 )
pallete4 = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1019.0
margin_bottom = 145.0

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 1012.0
margin_bottom = 20.0
text = "Pallette 1"

[node name="Button 2" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1012.0
margin_bottom = 44.0
text = "Pallette 2"

[node name="Button 3" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 1012.0
margin_bottom = 68.0
text = "Pallette 3"

[node name="Button 4" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 1012.0
margin_bottom = 92.0
text = "Pallette 4"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[connection signal="onTextureSelected" from="PanelContainer" to="Player" method="onPalletteChanged"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="PanelContainer" method="onPallete1"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button 2" to="PanelContainer" method="onPallette2"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button 3" to="PanelContainer" method="onPallette3"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button 4" to="PanelContainer" method="onPallete4"]
